finalizing BTO methods

--- a/papers/Softening/bib.bib
+++ b/papers/Softening/bib.bib
@@ -1110,4 +1110,57 @@ title = {{Ab initio study of ferroelectric domain walls in .(formula presented)}
 volume = {65},
 year = {2002}
 }
+@article{Hager2005,
+author = {Hager, William W and Zhang, Hongchao},
+file = {:home/ponet/Documents/Mendeley Desktop/030601880.pdf:pdf},
+journal = {SIAM J. Optim.},
+keywords = {conjugate gradient method,convergence,line search,unconstrained optimization},
+number = {1},
+pages = {170--192},
+title = {{Guaranteed Descent and an Efficient Line Search}},
+volume = {16},
+year = {2005}
+}
+
+rticle{Hestenes1952,
+abstract = {An interative algorithm is given for solving a system Ax=k of n linear equations in n unknowns. The solution is given in n steps. It is shown that this method is a special case of a very general method which als includes Haussian elimination. These general algorithms are essentially algorithms for finding an n dimensional ellipsoid. Connections are made with the theory of orthogonal polynomials and continued fractions.},
+author = {Hestenes, M.R. and Stiefel, E.},
+doi = {10.6028/jres.049.044},
+file = {:home/ponet/Documents/Mendeley Desktop/jresv49n6p409{\_}A1b.pdf:pdf},
+issn = {0091-0635},
+journal = {J. Res. Natl. Bur. Stand. (1934).},
+number = {6},
+pages = {409},
+title = {{Methods of conjugate gradients for solving linear systems}},
+volume = {49},
+year = {1952}
+}
+
+@article{Peierls1940,
+abstract = {Calculations are made of the size of a dislocation and of the critical shear stress for its motion.},
+author = {Peierls, R.},
+doi = {10.1088/0959-5309/52/1/305},
+file = {:home/ponet/Documents/Mendeley Desktop/R{\_}Peierls{\_}1940{\_}Proc.{\_}Phys.{\_}Soc.{\_}52{\_}34.pdf:pdf},
+issn = {09595309},
+journal = {Proc. Phys. Soc.},
+number = {1},
+pages = {34--37},
+title = {{The size of a dislocation}},
+volume = {52},
+year = {1940}
+}
+
+@article{Nabarro1947,
+abstract = {The properties of dislocations are calculated by an approximate method due to Peierls. The width of a dislocation is small, displacements comparable with the interatomic distance being confined to a few atoms. The shear stress required to move a dislocation in an otherwise perfect lattice is of the order of a thousandth of the "theoretical" shear strength. The energy and effective mass of a single dislocation increase logarithmically with the size of the specimen. A pair of dislocations of opposite sign in the same glide plane cannot be in stable equilibrium unless they are separated by a distance of the order of 10 000 lattice spacings. If an external shear stress is applied there is a critical separation of the pair of dislocations at which they are in unstable equilibrium. The energy of this unstable state is the activation energy for the formation of a pair of dislocations. It depends on the external shear, and for practical stresses is of the order of 7 electron volts per atomic plane. The size and energy of dislocations in real crystals are unlikely to differ greatly from those calculated: the stress required to move a dislocation and the critical separation of two dislocations may be seriously in error.},
+author = {Nabarro, F. R.N.},
+doi = {10.1088/0959-5309/59/2/309},
+file = {:home/ponet/Documents/Mendeley Desktop/F{\_}R{\_}N{\_}Nabarro{\_}1947{\_}Proc.{\_}Phys.{\_}Soc.{\_}59{\_}256.pdf:pdf},
+issn = {09595309},
+journal = {Proc. Phys. Soc.},
+number = {2},
+pages = {256--272},
+title = {{Dislocations in a simple cubic lattice}},
+volume = {59},
+year = {1947}
+}
 
