--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -1,5 +1,5 @@
 %
-\documentclass[12pt,a4paper,makeidx]{phdthesis}
+\documentclass[12pt,a4paper,makeidx,oneside]{phdthesis}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath,xcolor}
 \usepackage[backend=biber,refsection=chapter]{biblatex}
