--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -59,6 +59,7 @@ The 90$^\circ$ boundary between the region with out-of-plane polarization and in
 
 In order to probe the stiffness of the sample in different regions of space, measurements based on contact resonance frequency microscopy (CRFM) were performed.
 This technique is based on scanning probe microscopy where an atomic force microscopy tip on a cantilever is brought into contact with the surface of the sample.
+The maximal mechanical load was 20 micro-Newtons, and the surface contact of the tip is estimated to be 7 nm. 
 The combined system of the cantilever and the sample then acts as a series of springs, whose resonance frequence can be measured as a probe of the local stiffness under the tip~\cite{Rabe2000}.
 Through Hooke's law it is known that the resonance frequency of a linear spring is given by $\omega = \sqrt{\frac{k}{m}}$, thus when the sample has a higher stiffness $k$, it leads to a higher resonance frequency measured by the tip.
 Using this method, the only limit on spatial resolution is the scanning speed, or the duration of the experiment.
@@ -294,7 +295,7 @@ This is probably due to a degree of pinning by defects, or the substrate.
 Due to the complexity of the model, and the interaction of the strain with the tip, we forfeit the search for an analytical description and instead proceed with numerical simulations to verify the above statements.
 
 \section{Methods}
-We are trying to compute and minimize the free energy density in Eq.~\ref{eq:BTO_energy}, which is written in terms of the values and gradients of two order parameters $P$ and $u$.
+To solve the model, we have to compute and minimize the free energy density in Eq.~\ref{eq:BTO_energy}, which is written in terms of the values and gradients of two order parameters $P$ and $u$.
 In the coninuum formulation, these are defined for each point in space and are thus sometimes referred to as fields.
 There is, therefore, another name that is commonly found in the literature to refer to these types of models: phase field models.
 Our task is thus to find the values of these two fields at each point in the geometry under study, that minimize the total free energy of the system, which will be the equilibrium configuration of the system.
@@ -326,7 +327,6 @@ From these equations it is clear that each node has a separate shape function. T
 	\item Completeness condition: Any field that is a linear polynomial in $x$ and $y$ is represented exactly.
 \end{itemize}
 
-
 Since we need the derivatives of the $P$ and $u$ fields in order to calculate the free energy density, we perform the chain rule and find for any function $f$
 \begin{align}
 	\label{eq:BTO_derivatives}
@@ -337,9 +337,10 @@ In the numerical implementation, these derivatives are found for each element by
 This also includes calculating the determinant of the Jacobian, which can be used to calculate the area or volume of the element.
 
 Using these definitions, one can select certain points, the so-called quadrature points, inside each element at which the function values for the $P$ and $u$ fields are interpolated from their values at the nodes.
-These can then be filled into the free energy density Eq.~\ref{eq:BTO_energy} to find the contribution of the volume inside the element to the total free energy.
+These can then be filled into the free energy density Eq.~\ref{eq:BTO_energy} to approximate the contribution of the volume inside the element to the total free energy.
+The values of the fields at the nodes are therefore the degrees of freedom of our model. 
 A big bonus of this framework is that gradients of the fields can be evaluated purely locally, inside each element, through the use of the interpolation method and field values at the nodal points (see Eq.~\ref{eq:BTO_derivatives}).
-It also allows for a great flexibility through the density of the chosen grid and the order of interpolating functions used, although we do not exploit these.
+It also allows for a great flexibility through the density of the chosen grid, the morphology of the elements, and the order of interpolating functions used, although we do not exploit these.
 
 \begin{figure}
 	\begin{subfigure}{0.49\textwidth}
@@ -361,16 +362,18 @@ It also allows for a great flexibility through the density of the chosen grid an
 	\caption{\label{fig:BTO_fem} Example of the morfology of a 2D finite element grid.}
 \end{figure}
 
-In our case, we use a rectangular geometry uniformly spanned by tetrahedron elements, as shown in Fig.~\ref{fig:BTO_fem}(c-d).
+In our case, we use a rectangular geometry uniformly spanned by tetrahedron elements, as shown in Fig.~\ref{fig:BTO_fem}(c,d).
 The uniform mesh is largely motivated by implementation complexity, since we use a mostly in-house developed code based on the FEM building blocks supplied by the \href{https://github.com/KristofferC/JuAFEM.jl}{JuAFEM.jl} package.
-It is obvious that the computational cost could be lowered by using a finer meshing close to the domain wall, where the fields vary the most, and a more coarse one in the domains.
-One has to, however, consider that when the tip is applied a finer mesh is also required around it, leading to different meshes for different locations of applied tip, greatly increasing the post-processing complexity.
+Another reason for the uniform grid, is that this mimics numerically the Peierls-Nabarro barriers that are created by the lattice.
+As will be discussed further below, these pin the wall to a certain degree and should be taken into account for the simulation to be realistic.
 
-The last bulding block for the simulation is a way to optimize the fields in order to reach the equilibrium condition, both with and without applied tip.
-To do this we use a Conjugate Gradient method to minimize the total energy in terms of all the degrees of freedom (DOFs), i.e. the values of the fields at each of the nodes on the mesh.
-This requires us to define the partial derivatives of the total energy in terms of all the DOFs, for which we use a forward automatic differentiation scheme as implemented in \href{www.juliadiff.org/ForwardDiff.jl/latest/}{ForwardDiff.jl}, again for its remarkable simplicity and speed (as an idea, on a 24 core E5-2680 v3 server, the $\approx$ 3.5 million partial derivatives are computed in around 2.1 seconds).
+The last bulding block for the simulation is a way to optimize the fields in order to reach the equilibrium condition at minimum energy, both with and without applied tip.
+To achieve this we use the Conjugate Gradient method \cite{Hestenes1952,Hager2005} as implemented in the package \href{https://github.com/JuliaNLSolvers/Optim.jl}{Optim.jl}.
+It's an iterative scheme that uses the gradient and previous step to decide on the next step direction. 
+This requires us to determine the partial derivatives of the total energy in terms of all the degrees of freedom, i.e. the value of each component of $P$ and $u$ at the node points of the mesh.
+We chose to use a forward automatic differentiation scheme as implemented in \href{www.juliadiff.org/ForwardDiff.jl/latest/}{ForwardDiff.jl}, again for its remarkable simplicity and speed (as an idea, on a 24 core E5-2680 v3 server, the $\approx$ 3.5 million partial derivatives are computed in around 2 seconds).
 
-Using the parameters from previous ab-initio results \cite{Marton2010}, we first optimized the equilibrium situation for both a uniform domain and a single domain wall.
+Using the parameters from previous ab-initio results \cite{Marton2010} and reported in Tab.~\ref{tab:BTO_param}, we first optimized the equilibrium situation for both a uniform domain and a single domain wall, the result of which is shown in Fig.~\ref{fig:BTO_wall}.
 A gaussian force field, $\frac{a}{\sigma \sqrt{2\pi}}e^{-\frac{(x-x_0)^2}{2\sigma^2}}$ with $\sigma = 1 \cdot 10^{-9}$ representing the diameter of the contact area and $a = 1 \cdot 10^{-18} \frac{eV}{nm^3}$, was then applied at various positions $x_0$ throughout both geometries.
 The uniform domain simulation is used as a measure of the finite-size effects that are inherently present in our simulations due to the long rangedness of strain and non-infinite geometry.
 
@@ -382,6 +385,28 @@ Since this is unphysical, we compensate for this by adding the differences to th
 	\IncludeGraphics{xsize_domain_strain.png}
 	\caption{{\bf Finite size effects in domain.} a) Maximum indent by the applied tip, the smaller $L_x$ results in a larger difference of the indentation at the edge of the  geometry versus in the center. Since this simulation is for a domain the tip should result in an identical indentiation no matter where it is applied. It is also clear that when the geometry is smaller, the central indentation is also larger due to less total material supporting the tip. b) Visual demonstration of the asymmetric deformation and $\varepsilon_{zz}$ that results from the open boundary conditions and a tip applied at the edge of the geometry.}
 \end{figure}
+
+To conclude this section, we would like to comment on the Peierls-Nabarro barriers \cite{Peierls1940,Nabarro1947}, since they are of great influence on the movement of the DW.
+In essence, it is a result from the non-homogeneity of the crystalline lattice on the unit-cell lengthscale.
+That causes the DW to have a preferred center inside one of the unit-cells, usually either on the edge or in the middle.
+A thorough study from first-principles was performed by Meyer et al. \cite{Meyer2002}, where it was correctly stated that only by using this degree of granularity leads to accurate results.
+The purely continuum GLD model, however, does not account for this contribution.
+As mentioned before, the DW sliding is therefore completely free, which is at odds with the real behavior.
+We are thus faced with the commonly reappearing issue of having to simulate physics that occur at different lengthscales.
+In this case, however, we are to some extent saved by a spurious numerical effect that mimics the naturally occuring Peierls-Nabarro barrier.
+This was investigated by Marton in Ref.~\cite{Marton2018} for the case of BTO.
+It boils down to the fact that through the approximated interpolation of the fields, it is numerically favorable to situate the center of the wall at a node, rather than inside an element.
+In this way the simulation avoids sampling the paraelectric state, which is at the top of the double-well potential that results from the Landau part $f_l$ of the energy in Eq.~\ref{eq:BTO_energy}, and causes the non-zero $P$ in the domains.
+When the wall is forced to move accross the grid due to the applied tip, the simulation is forced to overcome this high-energy configuration in order to jump between equilibrium positions.
+This in turn causes the numerical Peierls-Nabarro barrier.
+
+
+
+
+
+
+
+
 
 
 \section{Results}
