some work on bto

--- a/papers/Cr/Cr.tex
+++ b/papers/Cr/Cr.tex
@@ -1,19 +1,22 @@
 \chapter{Coupling between spin and strain density waves \label{ch:CrSDW}}
 \section{Introduction}
-In all previous chapeters, we discussed situations for which the order parameters were static, or at least at equilibrium.
-For GeTe, the polarization and resulting spin splitting was fixed. Even though it is interesting to study what the effect of changes to the polarization has to this splitting \cite{Monserrat2017}, even in that case, the electrons can be assumed to be in equilibrium with the changing potential at all times.
-This is because the electronic dynamics is so much faster than the atomic ones, meaning that the Born-Oppenheimer approximation is still valid.
-In the study on GdMn$_2$O$_5$, the changing magnetic structure and corresponding ferroelectric polarization was orders of magnitude faster than the change of the magnetic field, again allowing an equilibrium description.
+In all previous chapetrs, we discussed situations for which the order parameters were static, or at least at instantaneous equilibrium.
+For GeTe, the polarization and resulting spin splitting was fixed.
+While it is interesting to study what the effect of changes to the polarization has to this splitting \cite{Monserrat2017}, even in that case, the electrons can be assumed to be in equilibrium with the changing ionic potential, at all times.
+This is because as alluded to before, the electronic dynamics is generally many orders of magnitude faster than the atomic ones, meaning that the Born-Oppenheimer approximation remains valid.
+In the study on GdMn$_2$O$_5$, the changing magnetic structure and corresponding ferroelectric polarization was orders of magnitude faster than the slowly varying magnetic field, again allowing for an equilibrium description.
 However, the regime in which this breaks down is certainly accessible to experiments with faster varying magnetic fields.
-In the case of BaTiO$_3$ with the softening domain wall, while the experiments were dependent on a resonance frequency, the applied perturbation was found to not markedly change the properties of the material, warranting again a static description.
-New physics arise, however, when two orders with different timescales for their dynamics are coupled, and where the slave order parameter has slower dynamics than the primary one.
+In the case of BaTiO$_3$ with the softening domain wall, while the experiments were dependent on a resonance frequency, the applied perturbation was found to not markedly change the properties of the material, warranting again a static description. \lp{hmmmmm}
+
+New physics arise, however, when two orders with different timescales for their dynamics are coupled.
+Especially when a slave order parameter has slower dynamics than the primary one, can interesting effects arise.
 This is the case in the material we study here, Chromium, an itinerant antiferromagnetic metal \cite{Kulikov1984,Fawcett1988}.
 It is the hallmark example of a material where a spin density wave (SDW) develops due to local repulsive interactions of the electron gas, combined with a nesting of the fermi surface.
-Due to magnetostriction, this spin density wave then causes a periodic lattice displacement (PLD) which decreases the bondlengths between the spins that have large magnitude.
-The SDW is formed by electrons and thus thermalizes on very quick timescales when a perturbation is applied\cite{Nicholson2016}.
-The coupled PLD, however, denotes the movement of atoms and thus has much slower dynamics.
+Due to exchange striction, this SDW then causes a periodic lattice displacement (PLD), decreasing the bondlengths between the spins that have large magnitude, and increasing them between smaller magnitude spins.
+Since the SDW is constituted by electrons, it thermalizes on very short timescales when a perturbation is applied\cite{Nicholson2016}.
+The coupled PLD, however, shows much slower dynamics, since it involves the movement of atoms.
 With ultrafast pump-probe experiments that have a below picosecond resolution, these PLD dynamics can be studied and, more imporantly, controlled very precisely through excitation of the much faster responding SDW.
-Among other things, this allows for the suppression of the intermediate nonequilibrium state and reproducing adiabatic transitions on much faster timescales than would be possible without this control, which is termed ``shortcuts to adiabaticity'' in quantum technology \cite{Torrontegui2013,Deffner2014,Zhou2017}.
+Among various possibilities, this allows for the suppression of the intermediate nonequilibrium state and reproducing adiabatic transitions on much faster timescales than would be possible without this control, which is termed ``shortcuts to adiabaticity'' in quantum technology \cite{Torrontegui2013,Deffner2014,Zhou2017}.
 This also allows to apply a specifically designed set of pulses in order for the PLD oscillation to follow a particular envelope function, as will be shown theoretically below.
 
 \section{Experimental methods}
