--- a/papers/Softening/bib.bib
+++ b/papers/Softening/bib.bib
@@ -1164,3 +1164,46 @@ volume = {59},
 year = {1947}
 }
 
+@article{Padilla1996,
+abstract = {We present a first-principles study of 180° ferroelectric domain walls in tetragonal barium titanate. The theory is based on an effective Hamiltonian that has previously been determined from first-principles ultrasoft-pseudopotential calculations. Statistical properties are investigated using Monte Carlo simulations. We compute the domain-wall energy, free energy, and thickness, analyze the behavior of the ferroelectric order parameter in the interior of the domain wall, and study its spatial fluctuations. An abrupt reversal of the polarization is found, unlike the gradual rotation typical of the ferromagnetic case. {\textcopyright} 1996 The American Physical Society.},
+author = {Padilla, J. and Zhong, W. and Vanderbilt, David},
+doi = {10.1103/PhysRevB.53.R5969},
+file = {:home/ponet/Downloads/PhysRevB.53.R5969.pdf:pdf},
+issn = {1550235X},
+journal = {Physical Review B - Condensed Matter and Materials Physics},
+number = {10},
+pages = {R5969--R5973},
+title = {{First-principles investigation of 180° domain walls in BaT}},
+volume = {53},
+year = {1996}
+}
+
+@article{Cao1991,
+author = {Cao, Wenwu and Cross, L. E.},
+doi = {10.1103/PhysRevB.44.5},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Cao, Cross - 1991 - Theory of tetragonal twin structures in ferroelectric perovskites with a first-order phase transition.pdf:pdf},
+issn = {0163-1829},
+journal = {Physical Review B},
+mendeley-groups = {PhD Thesis/Softening,PhD Thesis},
+month = {jul},
+number = {1},
+pages = {5--12},
+title = {{Theory of tetragonal twin structures in ferroelectric perovskites with a first-order phase transition}},
+url = {https://link.aps.org/doi/10.1103/PhysRevB.44.5},
+volume = {44},
+year = {1991}
+}
+
+@article{Hu1998,
+author = {Hu, Hong-Liang and Chen, Long-Qing},
+doi = {10.1111/j.1151-2916.1998.tb02367.x},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Hu, Chen - 1998 - Ferroelectric Domain Formation.pdf:pdf},
+issn = {00027820},
+journal = {Journal of American Ceramic Society},
+mendeley-groups = {PhD/phasefieldmodeling},
+pages = {492--500},
+title = {{Ferroelectric Domain Formation}},
+volume = {81},
+year = {1998}
+}
+
